@@ -2,7 +2,8 @@
 0.4 (Mai 2018):
     * fixed bug #6 drag 'n drop from QGIS 3 layer list
     * fixed bug #7 import of raster layers known to QGIS MapLayerRegistry
-    * fixed #7 VRTs can now be written with empty virtual raster bands (but have to define at least one virtual band)
+    * enhancement #7 VRTs can now be written with empty virtual raster bands (but have to define at least one virtual band)
+    * fixed bug #10 removal of selected data sources
 
 
 0.3 (2018-03-02(:
